-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.2
-
None
-
-
5399588e4 (11.0)
Deployment to remote device fails when using Docker toolchain on macOS:
[0/1 0.0/sec] Install the project... -- Install configuration: "Debug" -- Up-to-date: /tmp/Qt-Creator-staging-f6a44e3844a8ae05/usr/examples/quickcontrols/texteditor/texteditorexample 10:20:44: The process "docker://boot2qt-raspberrypi4-64:6.6.0/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/cmake" exited normally. 10:20:45: Stopped the running application. 10:20:45: Deploy step finished. 10:20:45: 1 file(s) need to be uploaded. 10:20:45: sftp> -mkdir /usr 10:20:45: sftp> -mkdir /usr/examples 10:20:45: sftp> -mkdir /usr/examples/quickcontrols 10:20:45: sftp> -mkdir /usr/examples/quickcontrols/texteditor 10:20:45: sftp> put /tmp/Qt-Creator-staging-f6a44e3844a8ae05/usr/examples/quickcontrols/texteditor/texteditorexample /usr/examples/quickcontrols/texteditor/texteditorexample 10:20:45: remote mkdir "/usr": Failure remote mkdir "/usr/examples": Failure remote mkdir "/usr/examples/quickcontrols": Failure remote mkdir "/usr/examples/quickcontrols/texteditor": Failure stat /tmp/Qt-Creator-staging-f6a44e3844a8ae05/usr/examples/quickcontrols/texteditor/texteditorexample: No such file or directory 10:20:45: Deploy step failed.
- relates to
-
QTBUG-116312 Applications not starting with macOS docker via Qt Creator
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-29524 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 498156,2 | RemoteLinux: Don't use SFTP if source is remote | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |