RemoteLinux: Don't use SFTP if source is remote

The SFTP does not work if the source files are on a remote devices
so we fall back to generic copy in those cases.

Fixes: QTCREATORBUG-29524
Change-Id: Iecb2723dfcbb65653ce6f793dc2d7253979540a5
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>